@@ -4,6 +4,13 @@ fidoconfig 0.10
 
 
 ----- cvs ci ------
+Mon Jun 05 12:23:00 SAMST 2000
+Georgi:
+* added new token delNotRecievedTIC (in link section).
+  For htick - if file not recieved, then remove TIC
+* added new filearea option - noreplace
+
+----- cvs ci ------
 Mon Jun  5 14:27:35 NOVST 2000
 max:
 * fixed carbonExtern parsing
